3tier/cfn/dev-3Tier-Web.template.yaml
Resources:
  dev3Tierinternetsg9F274F92:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: dev-3Tier-Web/dev-3Tier-internet-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      Tags:
        - Key: Name
          Value: dev-3Tier-internet-sg
      VpcId:
        Fn::ImportValue: dev-3Tier-Root:VPCVpcId2F75874A
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-internet-sg/Resource
  dev3TierinternetC5AC4D78:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        []
      Name: dev-3Tier-internet
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - dev3Tierinternetsg9F274F92
            - GroupId
      Subnets:
        - Fn::Select:
            - 0
            - Fn::Split:
                - ","
                - Fn::ImportValue: dev-3Tier-Root:VPCPublicSubnetIDs428979F9
        - Fn::Select:
            - 1
            - Fn::Split:
                - ","
                - Fn::ImportValue: dev-3Tier-Root:VPCPublicSubnetIDs428979F9
      Type: application
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-internet/Resource
  dev3Tierinternetlistener34129503:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: dev3TierinternetlistenerfleetGroup5FAE2361
          Type: forward
      LoadBalancerArn:
        Ref: dev3TierinternetC5AC4D78
      Port: 80
      Protocol: HTTP
      Certificates:
        []
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-internet/listener/Resource
  dev3TierinternetlistenerfleetGroup5FAE2361:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId:
        Fn::ImportValue: dev-3Tier-Root:VPCVpcId2F75874A
      TargetGroupAttributes:
        []
      Targets:
        []
      TargetType: instance
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-internet/listener/fleetGroup/Resource
  dev3TierwebasgInstanceSecurityGroup155CDEC1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: dev-3Tier-Web/dev-3Tier-web-asg/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        []
      Tags:
        - Key: Name
          Value: dev-3Tier-Web/dev-3Tier-web-asg
      VpcId:
        Fn::ImportValue: dev-3Tier-Root:VPCVpcId2F75874A
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-web-asg/InstanceSecurityGroup/Resource
  dev3TierwebasgInstanceSecurityGroupfromdev3TierWebdev3TierinternetsgF07D3D8580C7FDAA3B:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 80
      GroupId:
        Fn::GetAtt:
          - dev3TierwebasgInstanceSecurityGroup155CDEC1
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - dev3Tierinternetsg9F274F92
          - GroupId
      ToPort: 80
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-web-asg/InstanceSecurityGroup/from
        dev3TierWebdev3TierinternetsgF07D3D85:80
  dev3TierwebasgInstanceRole62E2FB34:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-web-asg/InstanceRole/Resource
  dev3TierwebasgInstanceProfile20F4CD13:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: dev3TierwebasgInstanceRole62E2FB34
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-web-asg/InstanceProfile
  dev3TierwebasgLaunchConfig4DAF45BF:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: ami-00a5245b4816c38e6
      InstanceType: t2.micro
      IamInstanceProfile:
        Ref: dev3TierwebasgInstanceProfile20F4CD13
      SecurityGroups:
        - Fn::GetAtt:
            - dev3TierwebasgInstanceSecurityGroup155CDEC1
            - GroupId
      UserData:
        Fn::Base64: |
          #!/bin/bash
    DependsOn:
      - dev3TierwebasgInstanceRole62E2FB34
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-web-asg/LaunchConfig
  dev3TierwebasgASGB00E4CC6:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MaxSize: "4"
      MinSize: "0"
      DesiredCapacity: "2"
      LaunchConfigurationName:
        Ref: dev3TierwebasgLaunchConfig4DAF45BF
      Tags:
        - Key: Name
          PropagateAtLaunch: true
          Value: dev-3Tier-Web/dev-3Tier-web-asg
      TargetGroupARNs:
        - Ref: dev3TierinternetlistenerfleetGroup5FAE2361
      VPCZoneIdentifier:
        - Fn::Select:
            - 0
            - Fn::Split:
                - ","
                - Fn::ImportValue: dev-3Tier-Root:VPCPublicSubnetIDs428979F9
        - Fn::Select:
            - 1
            - Fn::Split:
                - ","
                - Fn::ImportValue: dev-3Tier-Root:VPCPublicSubnetIDs428979F9
    UpdatePolicy:
      AutoScalingScheduledAction:
        IgnoreUnmodifiedGroupSizeProperties: true
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-web-asg/ASG
  dev3Tierweb3038E85D:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: dev-3Tier-Web/dev-3Tier-web
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        []
      Tags:
        - Key: Name
          Value: dev-3Tier-web
      VpcId:
        Fn::ImportValue: dev-3Tier-Root:VPCVpcId2F75874A
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-web/Resource
  dev3Tierwebfromdev3TierWebdev3TierinternetsgF07D3D858008FC100F:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from dev3TierWebdev3TierinternetsgF07D3D85:80
      FromPort: 80
      GroupId:
        Fn::GetAtt:
          - dev3Tierweb3038E85D
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - dev3Tierinternetsg9F274F92
          - GroupId
      ToPort: 80
    Metadata:
      aws:cdk:path: dev-3Tier-Web/dev-3Tier-web/from dev3TierWebdev3TierinternetsgF07D3D85:80
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=0.22.0,@aws-cdk/assets=0.22.0,@aws-cdk/aws-autoscaling=0.22.0,@aws-cdk/aws-autoscaling-common=0.22.0,@aws-cdk/aws-cloudformation=0.22.0,@aws-cdk/aws-cloudfront=0.22.0,@aws-cdk/aws-cloudwatch=0.22.0,@aws-cdk/aws-codedeploy-api=0.22.0,@aws-cdk/aws-codepipeline-api=0.22.0,@aws-cdk/aws-ec2=0.22.0,@aws-cdk/aws-elasticloadbalancingv2=0.22.0,@aws-cdk/aws-events=0.22.0,@aws-cdk/aws-iam=0.22.0,@aws-cdk/aws-kms=0.22.0,@aws-cdk/aws-lambda=0.22.0,@aws-cdk/aws-s3=0.22.0,@aws-cdk/aws-s3 [...]
Outputs:
  dev3TierwebSecurityGroupId830DAA5E:
    Value:
      Fn::GetAtt:
        - dev3Tierweb3038E85D
        - GroupId
    Export:
      Name: dev-3Tier-Web:dev3TierwebSecurityGroupId830DAA5E
  DnsName:
    Value:
      Fn::GetAtt:
        - dev3TierinternetC5AC4D78
        - DNSName
    Export:
      Name: dev-3Tier-DNSName
